@@ -7682,7 +7682,7 @@ fold_builtin_sqrt (tree arg, tree type)
 	  tree tree_root;
 	  /* The inner root was either sqrt or cbrt.  */
 	  /* This was a conditional expression but it triggered a bug
-	     in the Solaris 8 compiler.  */
+	     in Sun C 5.5.  */
 	  REAL_VALUE_TYPE dconstroot;
 	  if (BUILTIN_SQRT_P (fcode))
 	    dconstroot = dconsthalf;
