@@ -295,8 +295,8 @@ do_fixed_add (FIXED_VALUE_TYPE *f, const FIXED_VALUE_TYPE *a,
   double_int temp;
   int i_f_bits;
 
-  /* This was a conditional expression but it triggered a bug in the
-     Solaris 8 compiler.  */
+  /* This was a conditional expression but it triggered a bug in
+     Sun C 5.5.  */
   if (subtract_p)
     temp = double_int_neg (b->data);
   else
